--- a/DUCs.ipynb
+++ b/DUCs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuCQatQ8vMPzuilNgGMgUK",
+      "authorship_tag": "ABX9TyNfvZWYhZXB+ZZr3Kt+z0vL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,16 +29,16 @@
     {
       "cell_type": "code",
       "source": [
-        "install.packages(c('dplyr', 'magrittr','skimr','tidyr','janitor','datetime','readxl','forecast', dependencies = TRUE, repos = \"https://cran.rstudio.com/\"))"
+        "install.packages(c('dplyr', 'magrittr','skimr','tidyr','janitor','datetime','readxl','forecast', 'Hmisc', 'gmodels',  dependencies = TRUE, repos = \"https://cran.rstudio.com/\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "88oVvQ1zpYYi",
-        "outputId": "595991d7-18c7-44b2-ae16-41847d4d6035"
+        "outputId": "59c63d8f-c194-4661-bbae-a44ab25ee629"
       },
-      "execution_count": 63,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -52,7 +52,10 @@
             "\n",
             "Versions of these packages for your version of R might be available elsewhere,\n",
             "see the ideas at\n",
-            "https://cran.r-project.org/doc/manuals/r-patched/R-admin.html#Installing-packages”\n"
+            "https://cran.r-project.org/doc/manuals/r-patched/R-admin.html#Installing-packages”\n",
+            "also installing the dependencies ‘xts’, ‘TTR’, ‘quadprog’, ‘quantmod’, ‘checkmate’, ‘htmlwidgets’, ‘gtools’, ‘snakecase’, ‘fracdiff’, ‘lmtest’, ‘Rcpp’, ‘timeDate’, ‘tseries’, ‘urca’, ‘zoo’, ‘RcppArmadillo’, ‘gridExtra’, ‘htmlTable’, ‘viridis’, ‘Formula’, ‘gdata’\n",
+            "\n",
+            "\n"
           ]
         }
       ]
@@ -60,19 +63,97 @@
     {
       "cell_type": "code",
       "source": [
-        "x<-c('dplyr', 'magrittr','skimr','tidyr','janitor','datetime','readxl', 'forecast','ggplot2')\n",
+        "x<-c('dplyr', 'magrittr','skimr','tidyr','janitor','datetime','readxl', 'forecast','ggplot2', 'Hmisc', 'gmodels')\n",
         "lapply(x, require, character.only = TRUE)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 201
+          "height": 1000
         },
         "id": "ZZwSDZQW2sFY",
-        "outputId": "8828486d-afc4-4402-e9ab-f0e08ebdb646"
+        "outputId": "ecedda8a-c753-4e87-d60d-722bbb5ec1ab"
       },
-      "execution_count": 64,
+      "execution_count": 2,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Loading required package: dplyr\n",
+            "\n",
+            "\n",
+            "Attaching package: ‘dplyr’\n",
+            "\n",
+            "\n",
+            "The following objects are masked from ‘package:stats’:\n",
+            "\n",
+            "    filter, lag\n",
+            "\n",
+            "\n",
+            "The following objects are masked from ‘package:base’:\n",
+            "\n",
+            "    intersect, setdiff, setequal, union\n",
+            "\n",
+            "\n",
+            "Loading required package: magrittr\n",
+            "\n",
+            "Loading required package: skimr\n",
+            "\n",
+            "Loading required package: tidyr\n",
+            "\n",
+            "\n",
+            "Attaching package: ‘tidyr’\n",
+            "\n",
+            "\n",
+            "The following object is masked from ‘package:magrittr’:\n",
+            "\n",
+            "    extract\n",
+            "\n",
+            "\n",
+            "Loading required package: janitor\n",
+            "\n",
+            "\n",
+            "Attaching package: ‘janitor’\n",
+            "\n",
+            "\n",
+            "The following objects are masked from ‘package:stats’:\n",
+            "\n",
+            "    chisq.test, fisher.test\n",
+            "\n",
+            "\n",
+            "Loading required package: datetime\n",
+            "\n",
+            "Loading required package: readxl\n",
+            "\n",
+            "Loading required package: forecast\n",
+            "\n",
+            "Registered S3 method overwritten by 'quantmod':\n",
+            "  method            from\n",
+            "  as.zoo.data.frame zoo \n",
+            "\n",
+            "Loading required package: ggplot2\n",
+            "\n",
+            "Loading required package: Hmisc\n",
+            "\n",
+            "\n",
+            "Attaching package: ‘Hmisc’\n",
+            "\n",
+            "\n",
+            "The following objects are masked from ‘package:dplyr’:\n",
+            "\n",
+            "    src, summarize\n",
+            "\n",
+            "\n",
+            "The following objects are masked from ‘package:base’:\n",
+            "\n",
+            "    format.pval, units\n",
+            "\n",
+            "\n",
+            "Loading required package: gmodels\n",
+            "\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -87,10 +168,12 @@
               "\t<li>TRUE</li>\n",
               "\t<li>TRUE</li>\n",
               "\t<li>TRUE</li>\n",
+              "\t<li>TRUE</li>\n",
+              "\t<li>TRUE</li>\n",
               "</ol>\n"
             ],
-            "text/markdown": "1. TRUE\n2. TRUE\n3. TRUE\n4. TRUE\n5. TRUE\n6. TRUE\n7. TRUE\n8. TRUE\n9. TRUE\n\n\n",
-            "text/latex": "\\begin{enumerate}\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\end{enumerate}\n",
+            "text/markdown": "1. TRUE\n2. TRUE\n3. TRUE\n4. TRUE\n5. TRUE\n6. TRUE\n7. TRUE\n8. TRUE\n9. TRUE\n10. TRUE\n11. TRUE\n\n\n",
+            "text/latex": "\\begin{enumerate}\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\item TRUE\n\\end{enumerate}\n",
             "text/plain": [
               "[[1]]\n",
               "[1] TRUE\n",
@@ -117,6 +200,12 @@
               "[1] TRUE\n",
               "\n",
               "[[9]]\n",
+              "[1] TRUE\n",
+              "\n",
+              "[[10]]\n",
+              "[1] TRUE\n",
+              "\n",
+              "[[11]]\n",
               "[1] TRUE\n"
             ]
           },
@@ -132,7 +221,7 @@
       "metadata": {
         "id": "H0ZvIKKOIEjT"
       },
-      "execution_count": 65,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -148,7 +237,7 @@
         "id": "eJnKgU8UIoj7",
         "outputId": "032f2f2a-079b-4c1a-bef1-dca374807b67"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -203,6 +292,72 @@
     {
       "cell_type": "code",
       "source": [
+        "#describe(data) #hmisc pkg\n",
+        "skim_without_charts(data) #janitor pkg"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 718
+        },
+        "id": "c1YZ4dF89-Yv",
+        "outputId": "86d3a618-2cec-4ad6-be3a-2deaaebb455d"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "── Data Summary ────────────────────────\n",
+            "                           Values\n",
+            "Name                       data  \n",
+            "Number of rows             173   \n",
+            "Number of columns          10    \n",
+            "_______________________          \n",
+            "Column type frequency:           \n",
+            "  numeric                  10    \n",
+            "________________________         \n",
+            "Group variables            None  \n",
+            "\n",
+            "── Variable type: numeric ──────────────────────────────────────────────────────\n",
+            "   skim_variable              n_missing complete_rate    mean     sd   p0  p25\n",
+            "\u001b[90m 1\u001b[39m Drill_Year                         0             1 \u001b[4m2\u001b[24m016.     4.18 \u001b[4m2\u001b[24m009 \u001b[4m2\u001b[24m012\n",
+            "\u001b[90m 2\u001b[39m Drill_month                        0             1    6.40   3.47    1    3\n",
+            "\u001b[90m 3\u001b[39m Drilled well                       0             1  594.   413.     18  300\n",
+            "\u001b[90m 4\u001b[39m Drilled well and Completed         0             1  455.   235.     20  274\n",
+            "\u001b[90m 5\u001b[39m Crude_bitumen_well_count           0             1   57.1   30.3     0   35\n",
+            "\u001b[90m 6\u001b[39m Oil_well_count                     0             1  105.    64.8     0   54\n",
+            "\u001b[90m 7\u001b[39m Gas_well_count                     0             1  103.    95.3     5   51\n",
+            "\u001b[90m 8\u001b[39m Other_well_count                   0             1  190.   117.      0   96\n",
+            "\u001b[90m 9\u001b[39m Connected                          0             1  265.   143.     17  168\n",
+            "\u001b[90m10\u001b[39m Not Connected                      0             1  190.   117.      0   96\n",
+            "    p50  p75 p100\n",
+            "\u001b[90m 1\u001b[39m \u001b[4m2\u001b[24m016 \u001b[4m2\u001b[24m019 \u001b[4m2\u001b[24m023\n",
+            "\u001b[90m 2\u001b[39m    6    9   12\n",
+            "\u001b[90m 3\u001b[39m  508  761 \u001b[4m2\u001b[24m030\n",
+            "\u001b[90m 4\u001b[39m  406  629 \u001b[4m1\u001b[24m079\n",
+            "\u001b[90m 5\u001b[39m   53   75  147\n",
+            "\u001b[90m 6\u001b[39m  110  149  272\n",
+            "\u001b[90m 7\u001b[39m   76  120  754\n",
+            "\u001b[90m 8\u001b[39m  171  262  514\n",
+            "\u001b[90m 9\u001b[39m  231  330  817\n",
+            "\u001b[90m10\u001b[39m  171  262  514\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ERROR",
+          "evalue": "ignored",
+          "traceback": [
+            "Error in is.null(text_repr) || nchar(text_repr) == 0L: 'length = 11' in coercion to 'logical(1)'\nTraceback:\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Combine first and second columns and create a date column\n",
         "data$date <- as.Date(paste(data$Drill_Year, data$Drill_month, \"01\", sep = \"-\"), format = \"%Y-%m-%d\")\n",
         "# Create the DUC% field\n",
@@ -218,7 +373,7 @@
         "id": "nj3S_8NSKvhZ",
         "outputId": "4e4ae8f1-c1f1-42c7-a223-49f3d825f333"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -300,7 +455,7 @@
         "id": "Pf39Xh_-VXTc",
         "outputId": "4d9a5b45-c9dd-4c76-e7cf-54ec0ed32989"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +510,7 @@
         "id": "k9m53WoS70Yb",
         "outputId": "50221102-abfb-4ca4-d2d1-28711bba096d"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -424,7 +579,7 @@
         "id": "lTBbi2ttAy_D",
         "outputId": "34462f61-413b-47bf-db75-35543b4d5b30"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -461,7 +616,7 @@
         "id": "upSZo4-gBSZR",
         "outputId": "24350b68-6ae5-4b93-aa2b-4e6bd12bc348"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -497,7 +652,7 @@
         "id": "FYGcasV7C3lj",
         "outputId": "13e55f1c-22c8-4fbe-90e7-967f60348b46"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -544,7 +699,7 @@
         "id": "bsOWejvoE0rc",
         "outputId": "0cc11a4c-afa4-4767-abd8-5adf1b2d9c46"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -573,7 +728,7 @@
         "id": "GdQtCBj00Y5d",
         "outputId": "181ae069-e1a2-4e85-effc-6859a92449d6"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -607,7 +762,7 @@
         "id": "19-4r_tbGESc",
         "outputId": "7b608c53-c3b3-4241-b6ab-58fa67904a57"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +804,7 @@
         "id": "20SRvsU-Hy3F",
         "outputId": "bc70ebd6-c604-42a0-dbd4-6caf218e1549"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -681,7 +836,7 @@
         "id": "eUT-V4IPJOce",
         "outputId": "7f5a09f7-54d8-4daa-8378-132824d6e737"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -718,7 +873,7 @@
         "id": "7hBWDUV5Lj2J",
         "outputId": "7c57f8cd-9003-4268-914b-50ec0844a808"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +920,7 @@
         "id": "Q2W1WeFXM-RG",
         "outputId": "38cbbaad-3676-4d5a-baa5-99edc46ea7b3"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -797,7 +952,7 @@
         "id": "RPsbCDENSa0W",
         "outputId": "115d3159-c9c0-4b71-8361-d38423f2ee6e"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -829,7 +984,7 @@
         "id": "pkklqSGL0OwW",
         "outputId": "ca3ce211-9bca-448c-cfc0-344cb966ee85"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -860,7 +1015,7 @@
         "id": "9QoyEnz1xqtt",
         "outputId": "9021e788-c295-4b52-e43b-582d31cbf7ff"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -895,7 +1050,7 @@
         "id": "fLgUVhtGY-vm",
         "outputId": "75cc2fa3-8005-4145-9782-21c650935ee4"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -930,7 +1085,7 @@
         "id": "T3WLc7xQabEk",
         "outputId": "afd9381c-d01f-4d86-dd05-60beb396c5c6"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -962,7 +1117,7 @@
         "id": "ezAthEagcEZr",
         "outputId": "31672f0f-a72c-4ad7-9178-8f21375c2f66"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1010,7 +1165,7 @@
         "id": "N74TcpQScrqu",
         "outputId": "69baa23b-1675-40d4-9f11-a89a0a4454c5"
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1056,7 +1211,7 @@
         "id": "jOdcB3UXefSb",
         "outputId": "7686a7e6-53c4-4010-9f12-5a5164782c77"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1089,7 +1244,7 @@
         "id": "aFrfwhqGevHs",
         "outputId": "baa0fcff-e0c7-4260-ce97-30a1d512706d"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1121,7 +1276,7 @@
         "id": "yNysoeAEmwNZ",
         "outputId": "ad0cb9b3-7d34-467f-87a8-ddb2f375b3af"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1161,7 +1316,7 @@
         "id": "Z8pos_z0tKlm",
         "outputId": "a498c963-0485-4374-974f-bd81ec1dec01"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1190,7 +1345,7 @@
         "id": "G-AfEK5LumcO",
         "outputId": "ef6fa62e-38ef-488d-d6a6-13e6b5a525d1"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1235,7 +1390,7 @@
         "id": "ScIyipVLzsJP",
         "outputId": "15b2e228-032a-4935-de10-09d485db464f"
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1280,7 +1435,7 @@
         "id": "iq0hrSL80mY4",
         "outputId": "6efaa4ef-0ed0-4c63-ae02-29ed4e0b4eed"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
